{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 116,
  "lineage": "eb386ed7-459f-e658-3f6b-e9be1eb8425c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629760017811:vpc/vpc-0e7b1bb99d6028b8e",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-017c97054a73a819f",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-fd4fc187",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "VPC"
                ]
              }
            ],
            "id": "vpc-0e7b1bb99d6028b8e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d1ebb9c0ddf72f89",
            "owner_id": "629760017811",
            "tags": {
              "Name": "VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "ecs_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:629760017811:listener/app/ecs-alb/52c6f77aa524e035/6172228ca7bcaac8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:629760017811:targetgroup/ecs-alb-target-group/db8c42529e16beb5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:629760017811:listener/app/ecs-alb/52c6f77aa524e035/6172228ca7bcaac8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:629760017811:loadbalancer/app/ecs-alb/52c6f77aa524e035",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_target_group.ecs_alb_target_group",
            "aws_security_group.alb_ingress",
            "data.aws_subnets.public_subnets",
            "data.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:629760017811:loadbalancer/app/ecs-alb/52c6f77aa524e035",
            "arn_suffix": "app/ecs-alb/52c6f77aa524e035",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-alb-933163596.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:629760017811:loadbalancer/app/ecs-alb/52c6f77aa524e035",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a701e604e24f6284"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-072a76a43636248f3"
              },
              {
                "subnet_id": "subnet-0aa0f96818c2073e4"
              }
            ],
            "subnets": [
              "subnet-072a76a43636248f3",
              "subnet-0aa0f96818c2073e4"
            ],
            "vpc_id": "vpc-0e7b1bb99d6028b8e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_ingress",
            "data.aws_subnets.public_subnets",
            "data.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:629760017811:targetgroup/ecs-alb-target-group/db8c42529e16beb5",
            "arn_suffix": "targetgroup/ecs-alb-target-group/db8c42529e16beb5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:629760017811:targetgroup/ecs-alb-target-group/db8c42529e16beb5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e7b1bb99d6028b8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629760017811:security-group/sg-0a701e604e24f6284",
            "description": "Ingress traffic from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a701e604e24f6284",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ECS - Application Load Balancer - Ingress",
            "name_prefix": "",
            "owner_id": "629760017811",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e7b1bb99d6028b8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_fargate_task_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629760017811:security-group/sg-0f373df3d12872b9f",
            "description": "Ingress traffic from ALB to Fargate task",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f373df3d12872b9f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP Port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a701e604e24f6284"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "iis_fargate",
            "name_prefix": "",
            "owner_id": "629760017811",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e7b1bb99d6028b8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_ingress",
            "data.aws_vpc.vpc_id"
          ]
        }
      ]
    }
  ]
}